--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 .hw-dropzone {
   height: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 16px 10%;
   display: flex;
   flex-direction: column;
-  padding: 16px;
   align-items: center;
   justify-content: center;
   border: 2px dashed transparent;
@@ -12,6 +14,7 @@
 
 .hw-dropzone h2 {
   font-weight: bold;
+  font-size: 24px;
   color: rgb(var(--color-primary));
 }
 
